# qa-agent

./: .gitignore  README.md  config.example.yaml  config.py  main.py  pyproject.toml  requirements.txt
agent/: brain.py  explorer.py  judge.py  planner.py  prompts.py
browser/: engine.py  extractor.py  observer.py
models/: action.py  bug.py  page_state.py
